caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/unknown_type.caffeine
Blueprints
  "test" success_rate(x):
    Requiring { field: Unknown }
    signals { value: "x" }
